--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "slim/csrf": "^1.0",
         "jeremykendall/slim-auth": "^1.0",
         "illuminate/database": "~5.1",
-        "respect/validation": "^1.1"
+        "respect/validation": "^1.1",
+        "slim/psr7": "^1.0"
     },
 	"autoload": {
 		"psr-4": {
